--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="sv">
-<link rel="alternate" hreflang="sv" href="https://karingunnerek.se/" />
-<link rel="alternate" hreflang="en" href="https://karingunnerek.se/en/" />
-<link rel="alternate" hreflang="x-default" href="https://karingunnerek.se/" />
 <head>
   <!-- Character encoding and viewport -->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
+  <!-- Hreflang for international SEO -->
+  <link rel="alternate" hreflang="sv" href="https://karingunnerek.se/" />
+  <link rel="alternate" hreflang="en" href="https://karingunnerek.se/en/" />
+  <link rel="alternate" hreflang="x-default" href="https://karingunnerek.se/" />
   
   <!-- SEO Meta Tags -->
   <title>Arkitekt Skövde | Karin Gunnerek Arkitektur | Villaritning & Bygglovsritningar</title>
