--- a/projekt/kanalparken-mariestad.html
+++ b/projekt/kanalparken-mariestad.html
@@ -35,7 +35,7 @@
   <link rel="icon" type="image/x-icon" href="../favicon.ico">
 
   <!-- Stylesheet -->
-  <link rel="stylesheet" href="../style.css?v=14">
+  <link rel="stylesheet" href="../style.css?v=110">
 
   <!-- Google Analytics Placeholder -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=GA_MEASUREMENT_ID"></script>
@@ -209,8 +209,8 @@
 
             <h2>Projektgalleri</h2>
             <div class="project-gallery">
-              <img src="https://picsum.photos/800/600?random=5" alt="Kanalparken Mariestad exteriör - arkitekt Skaraborg" class="project-gallery__img">
-              <img src="https://picsum.photos/800/600?random=6" alt="Kanalparken Mariestad gemensam innergård" class="project-gallery__img">
+              <img src="https://picsum.photos/800/600?random=5" alt="Kanalparken Mariestad exteriör - arkitekt Skaraborg" class="project-gallery__img" loading="lazy">
+              <img src="https://picsum.photos/800/600?random=6" alt="Kanalparken Mariestad gemensam innergård" class="project-gallery__img" loading="lazy">
             </div>
           </div>
 
@@ -275,12 +275,12 @@
     </div>
   </footer>
 
-  <button id="back-to-top" class="back-to-top" aria-label="Tillbaka till toppen">
+  <button id="back-to-top-btn" class="back-to-top" aria-label="Tillbaka till toppen">
     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
       <polyline points="18 15 12 9 6 15"></polyline>
     </svg>
   </button>
 
-  <script src="../script.js"></script>
+  <script src="../project-page.js"></script>
 </body>
 </html>
