trying a new project view page

--- a/projekt/villa-sommaro-skovde.html
+++ b/projekt/villa-sommaro-skovde.html
@@ -4,50 +4,32 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <!-- Primary Meta Tags -->
   <title>Villa Sommarro Skövde | Nybyggnad Villaritning | Arkitekt Karin Gunnerek</title>
   <meta name="description" content="Villa Sommarro - nybyggnadsprojekt för privat villa i Skövde. Villaritningar och bygglovsritningar av arkitekt Karin Gunnerek. Hållbar design i Västra Götaland.">
   <meta name="keywords" content="villa Skövde, villaritning Skövde, nybyggnad Skövde, arkitekt Skövde, bygglovsritningar Västra Götaland, Villa Sommarro, hållbar arkitektur">
 
-  <!-- Open Graph / Facebook -->
   <meta property="og:type" content="article">
   <meta property="og:url" content="https://karingunnerek.se/projekt/villa-sommaro-skovde.html">
   <meta property="og:title" content="Villa Sommarro Skövde | Nybyggnad Villaritning | Arkitekt Karin Gunnerek">
   <meta property="og:description" content="Villa Sommarro - nybyggnadsprojekt för privat villa i Skövde. Villaritningar och bygglovsritningar av arkitekt Karin Gunnerek.">
-  <meta property="og:image" content="https://picsum.photos/800/600?random=1">
+  <meta property="og:image" content="https://picsum.photos/1200/800?random=1">
 
-  <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
   <meta property="twitter:url" content="https://karingunnerek.se/projekt/villa-sommaro-skovde.html">
   <meta property="twitter:title" content="Villa Sommarro Skövde | Nybyggnad Villaritning">
   <meta property="twitter:description" content="Villa Sommarro - nybyggnadsprojekt för privat villa i Skövde av arkitekt Karin Gunnerek.">
-  <meta property="twitter:image" content="https://picsum.photos/800/600?random=1">
+  <meta property="twitter:image" content="https://picsum.photos/1200/800?random=1">
 
-  <!-- Canonical URL -->
   <link rel="canonical" href="https://karingunnerek.se/projekt/villa-sommaro-skovde.html">
 
-  <!-- Hreflang -->
   <link rel="alternate" hreflang="sv" href="https://karingunnerek.se/projekt/villa-sommaro-skovde.html">
   <link rel="alternate" hreflang="en" href="https://karingunnerek.se/en/projekt/villa-sommaro-skovde.html">
   <link rel="alternate" hreflang="x-default" href="https://karingunnerek.se/projekt/villa-sommaro-skovde.html">
 
-  <!-- Favicon -->
   <link rel="icon" type="image/x-icon" href="../favicon.ico">
 
-  <!-- Stylesheet -->
-  <link rel="stylesheet" href="../style.css?v=110">
+  <link rel="stylesheet" href="../style.css?v=111">
 
-  <!-- Google Analytics Placeholder -->
-  <!-- TODO: Replace GA_MEASUREMENT_ID with your actual Google Analytics ID -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=GA_MEASUREMENT_ID"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-    gtag('config', 'GA_MEASUREMENT_ID');
-  </script>
-
-  <!-- Structured Data (Schema.org) -->
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
@@ -60,7 +42,7 @@
       "jobTitle": "Architect",
       "url": "https://karingunnerek.se"
     },
-    "image": "https://picsum.photos/800/600?random=1",
+    "image": "https://picsum.photos/1200/800?random=1",
     "dateCreated": "2024",
     "genre": ["Residential Architecture", "Sustainable Design", "Villa"],
     "locationCreated": {
@@ -76,60 +58,23 @@
     "inLanguage": "sv"
   }
   </script>
-
-  <!-- Breadcrumb Structured Data -->
-  <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "BreadcrumbList",
-    "itemListElement": [
-      {
-        "@type": "ListItem",
-        "position": 1,
-        "name": "Hem",
-        "item": "https://karingunnerek.se/"
-      },
-      {
-        "@type": "ListItem",
-        "position": 2,
-        "name": "Projekt",
-        "item": "https://karingunnerek.se/#projects"
-      },
-      {
-        "@type": "ListItem",
-        "position": 3,
-        "name": "Villa Sommarro Skövde",
-        "item": "https://karingunnerek.se/projekt/villa-sommaro-skovde.html"
-      }
-    ]
-  }
-  </script>
 </head>
 
 <body>
-  <!-- Skip to main content for accessibility -->
   <a href="#main-content" class="skip-to-content">Hoppa till huvudinnehåll</a>
 
   <nav class="nav" role="navigation" aria-label="Main navigation">
     <div class="nav__container">
       <a href="../index.html" class="nav__logo" aria-label="Karin Gunnerek, Architect - Return to homepage">Karin Gunnerek Architecture</a>
-
       <ul class="nav__menu">
-        <li>
-          <a href="../index.html#projects" class="nav__link">Projekt</a>
-        </li>
-        <li>
-          <a href="../index.html#about" class="nav__link">Om mig</a>
-        </li>
-        <li>
-          <a href="../index.html#booking" class="nav__link nav__link--cta">Boka konsultation</a>
-        </li>
+        <li><a href="../index.html#projects" class="nav__link">Projekt</a></li>
+        <li><a href="../index.html#about" class="nav__link">Om mig</a></li>
+        <li><a href="../index.html#booking" class="nav__link nav__link--cta">Boka konsultation</a></li>
       </ul>
     </div>
   </nav>
 
   <main id="main-content" style="padding-top: var(--nav-height);">
-    <!-- Project Hero Section -->
     <section class="project-hero">
       <div class="container">
         <div class="project-hero__content">
@@ -145,87 +90,88 @@
       </div>
     </section>
 
-    <!-- Project Image -->
     <section class="project-image-hero">
       <div class="container">
-        <img src="https://picsum.photos/800/600?random=1"
-             alt="Nybyggd modern villa i Skövde, ritad av arkitekt Karin Gunnerek - Villa Sommarro"
-             class="project-image-hero__img"
-             loading="eager">
+        <picture>
+          <source srcset="https://picsum.photos/1200/800?random=1" media="(min-width: 800px)">
+          <source srcset="https://picsum.photos/800/600?random=1" media="(min-width: 400px)">
+          <img src="https://picsum.photos/400/300?random=1"
+               alt="Nybyggd modern villa i Skövde, ritad av arkitekt Karin Gunnerek - Villa Sommarro"
+               class="project-image-hero__img"
+               loading="eager"
+               width="1200" height="800">
+        </picture>
       </div>
     </section>
+    
+    <section class="project-snapshot">
+        <div class="container">
+            <div class="snapshot-grid">
+                <div class="snapshot-item">
+                    <h3>Client Goal</h3>
+                    <p>To create a modern, sustainable family home that feels integrated with the natural landscape of Västra Götaland.</p>
+                </div>
+                <div class="snapshot-item">
+                    <h3>Architectural Solution</h3>
+                    <p>An open-plan villa designed around the sun's path, utilizing locally-sourced timber and large glass partitions to connect indoor and outdoor spaces.</p>
+                </div>
+                <div class="snapshot-item">
+                    <h3>Key Features</h3>
+                    <ul>
+                        <li>+180m² of living space</li>
+                        <li>65% reduction in energy needs</li>
+                        <li>Locally sourced Skaraborg timber</li>
+                        <li>Floor-to-ceiling panoramic windows</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
 
-    <!-- Project Content -->
     <section class="project-content">
       <div class="container">
         <div class="project-content__grid">
-          <!-- Main Content -->
           <div class="project-content__main">
-            <h2>Om projektet</h2>
-            <p>Villa Sommarro är ett nybyggnadsprojekt för en privat villa belägen i det vackra området Sommarro i Skövde. Som arkitekt i Skövde med fokus på hållbar design och lokal förankring, låg vårt uppdrag i att skapa en bostad som både respekterar och förhöjer det naturliga landskapet i Västra Götaland.</p>
+            <h2>A Vision of Sustainable Living</h2>
+            <p>The journey for Villa Sommarro began with a deep analysis of the site's unique character. The client's vision was a home that was not just built on the land, but a part of it. We studied the sun's path, wind patterns, and the surrounding forest to inform a design that maximizes natural light and minimizes environmental impact.</p>
+            <picture>
+                <source srcset="https://picsum.photos/1200/800?random=2" media="(min-width: 800px)">
+                <img src="https://picsum.photos/800/600?random=2" alt="Interior view showing the open-plan living space and connection to the outside." class="story-image" loading="lazy" width="1200" height="800">
+            </picture>
 
-            <p>Projektet startade med en omfattande analys av tomten och dess unika egenskaper. Genom att studera solens bana, vindförhållanden och den omgivande naturen kunde vi utforma en villa som maximerar dagsljusinsläppet och skapar en stark koppling mellan inomhus och utomhus. Bygglovsritningarna utformades med stor omsorg för att säkerställa att alla tekniska krav uppfylldes samtidigt som designvisionen bevarades.</p>
+            <h2>Harmonizing Structure and Nature</h2>
+            <p>The core of the design is its material honesty. We chose a facade of locally-sourced, untreated timber that will develop a beautiful silver patina over time, allowing the villa to merge gracefully with its woodland setting. The building's orientation and deep eaves are a direct response to the Nordic climate, providing passive heating in winter and cooling shade in summer.</p>
+            <picture>
+                <source srcset="https://picsum.photos/1200/800?random=3" media="(min-width: 800px)">
+                <img src="https://picsum.photos/800/600?random=3" alt="Close-up of the timber facade and the green roof detail." class="story-image" loading="lazy" width="1200" height="800">
+            </picture>
 
-            <h3>Hållbar arkitektur i Skövde</h3>
-            <p>Hållbarhet var en central del av projektet från start. Vi valde att arbeta med lokalt producerade och miljövänliga byggmaterial, inklusive trävirke från Skaraborg och naturligt isoleringsmaterial. Fasaden är klädd med trä som kommer att åldras vackert över tid och smälta in ännu mer med den omgivande skogen.</p>
-
-            <p>Energieffektivitet var också en prioritet. Villan är utrustad med markvärmepump, solpaneler på taket och ett väl isolerat klimatskal som minimerar energiförbrukningen. Stora glaspartier på söder- och västsidan fångar upp solens värme under vinterhalvåret, medan överbyggda terrasser ger skugga under sommaren.</p>
-
-            <h3>Design och planlösning</h3>
-            <p>Planlösningen är utformad för att passa en modern familjs behov med flexibla ytor som kan anpassas över tid. På entréplanet hittar man ett öppet sällskapsrum med kök, matplats och vardagsrum som flyter samman till en sammanhängande social zon. Stora skjutdörrar i glas öppnar upp mot en träterrass som fungerar som en förlängning av vardagsrummet under den varma årstiden.</p>
-
-            <p>På övre plan finns tre sovrum och ett generöst badrum med utsikt över skogen. Master bedroom har egen balkong och walk-in closet. I källarplanet finns ytterligare flexibla ytor som kan användas som kontor, gym eller gästrum beroende på familjens behov.</p>
-
-            <h3>Process från skiss till bygglov</h3>
-            <p>Som arkitekt i Skövde erbjuder vi en komplett tjänst från första idéskiss till färdiga bygglovsritningar och projektering. För Villa Sommarro inkluderade processen:</p>
-
-            <ul>
-              <li><strong>Förstudie och konceptutveckling:</strong> Inledande möten med kunden för att förstå önskemål, behov och budget. Skissförslag presenterades och diskuterades.</li>
-              <li><strong>Bygglovsritningar:</strong> Detaljerade ritningar upprättades enligt Boverkets krav och Skövde kommuns lokala föreskrifter. Ansökan om bygglov lämnades in och godkändes.</li>
-              <li><strong>Projektering och bygghandlingar:</strong> Efter godkänt bygglov arbetade vi fram kompletta bygghandlingar med detaljer för konstruktion, VVS, el och ventilation.</li>
-              <li><strong>Projektstöd under byggfasen:</strong> Löpande stöd till entreprenör och byggherre under hela byggprocessen för att säkerställa att designen realiseras enligt plan.</li>
-            </ul>
-
-            <h3>Resultat</h3>
-            <p>Villa Sommarro står idag som ett exempel på hur modern arkitektur i Skövde kan kombinera estetik, funktionalitet och hållbarhet. Familjen är mycket nöjd med resultatet och njuter av sitt nya hem som harmonierar perfekt med den omgivande naturen i Västra Götaland.</p>
-
-            <p>Projektet visar också vikten av att arbeta med en erfaren arkitekt som har lokalkännedom om Skövde och Skaraborg. Genom att förstå regionens klimat, byggnadstraditioner och lokala bygglov kunde vi skapa en villa som är både tidlös och unik.</p>
-
-            <h2>Projektgalleri</h2>
-            <div class="project-gallery">
-              <img src="https://picsum.photos/800/600?random=1" alt="Villa Sommarro exteriör - villaritning Skövde" class="project-gallery__img" loading="lazy">
-              <img src="https://picsum.photos/800/600?random=2" alt="Villa Sommarro interiör - arkitekt Skövde" class="project-gallery__img" loading="lazy">
+            <div class="project-cta-box mid-page-cta">
+              <h3>Inspired by this project?</h3>
+              <p>Let's discuss how we can bring your architectural vision to life. Book a complimentary consultation to get started.</p>
+              <a href="../index.html#booking" class="cta-button">Book a Consultation</a>
             </div>
+
+            <h2>An Interior Bathed in Light</h2>
+            <p>Inside, the open-plan living space is the heart of the home. Floor-to-ceiling glass partitions erase the boundary between inside and out, making the surrounding nature a permanent feature of the interior design. The layout is designed for modern family life, with flexible zones that can adapt as the family's needs evolve.</p>
           </div>
 
-          <!-- Sidebar -->
           <aside class="project-content__sidebar">
             <div class="project-info-box">
               <h3>Projektinformation</h3>
               <dl class="project-info-list">
-                <dt>År:</dt>
-                <dd>2024</dd>
-
-                <dt>Typ:</dt>
-                <dd>Nybyggnad, Villaritning</dd>
-
-                <dt>Plats:</dt>
-                <dd>Sommarro, Skövde, Västra Götaland</dd>
-
-                <dt>Tjänster:</dt>
-                <dd>Villaritningar, Bygglovsritningar, Projektering, Projektstöd</dd>
-
-                <dt>Kategori:</dt>
-                <dd>Residential, Villa, Hållbar arkitektur</dd>
+                <dt>År:</dt><dd>2024</dd>
+                <dt>Typ:</dt><dd>Nybyggnad, Villaritning</dd>
+                <dt>Plats:</dt><dd>Sommarro, Skövde</dd>
+                <dt>Tjänster:</dt><dd>Villaritningar, Bygglovsritningar, Projektering</dd>
+                <dt>Kategori:</dt><dd>Residential, Villa, Hållbar arkitektur</dd>
               </dl>
             </div>
-
             <div class="project-cta-box">
               <h3>Intresserad av liknande projekt?</h3>
               <p>Letar du efter en arkitekt i Skövde för villaritningar eller bygglovsritningar? Boka ett kostnadsfritt konsultationsmöte.</p>
               <a href="../index.html#booking" class="cta-button">Boka konsultation</a>
             </div>
-
             <div class="project-related-box">
               <h3>Liknande projekt</h3>
               <ul class="related-projects-list">
@@ -239,47 +185,18 @@
       </div>
     </section>
 
-    <!-- CTA Section -->
-    <section class="project-cta-section">
-      <div class="container">
-        <h2>Planerar du ett nybyggnadsprojekt i Skövde?</h2>
-        <p>Som erfaren arkitekt i Skövde och Västra Götaland hjälper jag dig genom hela processen - från första skissen till färdigt bygglov och projektering. Kontakta mig för ett kostnadsfritt konsultationsmöte.</p>
-        <a href="../index.html#booking" class="cta-button-large">Boka gratis konsultation</a>
-      </div>
-    </section>
+    <footer class="footer">
+        <div class="container">
+          <div class="footer__content">
+            <p class="footer__copyright">© 2025 Karin Gunnerek. Alla rättigheter förbehållna.</p>
+            <nav class="footer__nav" aria-label="Juridisk navigering">
+              <a href="../privacy.html" class="footer__link">Integritetspolicy</a>
+              <a href="../terms.html" class="footer__link">Användarvillkor</a>
+            </nav>
+          </div>
+        </div>
+    </footer>
+    <script src="../project-page.js"></script>
   </main>
-
-  <!-- Footer -->
-  <footer class="footer">
-    <div class="container">
-      <div class="footer__content">
-        <p class="footer__copyright">© 2025 Karin Gunnerek. Alla rättigheter förbehållna.</p>
-        <nav class="footer__nav" aria-label="Juridisk navigering">
-          <a href="../privacy.html" class="footer__link">Integritetspolicy</a>
-          <a href="../terms.html" class="footer__link">Användarvillkor</a>
-        </nav>
-      </div>
-    </div>
-  </footer>
-
-  <!-- Back to Top Button -->
-  <button id="back-to-top-btn" class="back-to-top" aria-label="Tillbaka till toppen">
-    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-      <polyline points="18 15 12 9 6 15"></polyline>
-    </svg>
-  </button>
-
-  <!-- Cookie Consent Banner -->
-  <div id="cookie-consent-banner">
-    <div class="cookie-banner__content">
-      <p class="cookie-banner__text">
-        <span>Denna webbplats använder cookies för att analysera webbplatsanvändning och förbättra din upplevelse.</span>
-        <a href="../privacy.html" class="cookie-banner__link">Läs mer i vår integritetspolicy</a>.
-      </p>
-      <button id="cookie-accept-btn" class="cookie-banner__accept">Acceptera</button>
-    </div>
-  </div>
-
-  <script src="../project-page.js"></script>
 </body>
 </html>
