new jrnl design bug fix

--- a/projekt/lake-vast-renovation.html
+++ b/projekt/lake-vast-renovation.html
@@ -209,6 +209,12 @@
       </div>
     </div>
   </footer>
+  
+  <button id="back-to-top-btn" class="back-to-top" aria-label="Tillbaka till toppen">
+    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+      <polyline points="18 15 12 9 6 15"></polyline>
+    </svg>
+  </button>
 
   <script>
     document.addEventListener('DOMContentLoaded', () => {
@@ -247,6 +253,8 @@
       });
     });
   </script>
+
+  <script src="../project-page.js"></script>
 
 </body>
 </html>
